Use instance method for figuring out bogus name